--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -240,7 +240,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
-                android:text="Travel &amp; Local"
+                android:text="@string/travelAndLocal"
                 android:textSize="12sp"
                 app:layout_constraintEnd_toEndOf="@+id/travelAndLocalButton"
                 app:layout_constraintStart_toStartOf="@+id/travelAndLocalButton"
@@ -251,7 +251,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
-                android:text="Similar"
+                android:text="@string/similar_button_str"
                 android:textSize="12sp"
                 app:layout_constraintEnd_toEndOf="@+id/similarButton"
                 app:layout_constraintStart_toStartOf="@+id/similarButton"
@@ -494,7 +494,6 @@
                 android:textColor="@android:color/black"
                 android:textSize="50sp"
                 app:layout_constraintEnd_toStartOf="@+id/textView16"
-                app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintHorizontal_chainStyle="packed"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/view4" />
