--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -235,21 +235,23 @@
 
             </android.support.constraint.ConstraintLayout>
 
-            <Button
+            <ImageView
                 android:id="@+id/travelAndLocalButton"
                 android:layout_width="70dp"
                 android:layout_height="70dp"
                 android:background="@drawable/ic_travel"
+                android:clickable="true"
                 app:layout_constraintEnd_toStartOf="@+id/similarButton"
                 app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toEndOf="@+id/constraintLayout"
                 app:layout_constraintTop_toTopOf="@+id/constraintLayout" />
 
-            <Button
+            <ImageView
                 android:id="@+id/similarButton"
                 android:layout_width="74dp"
                 android:layout_height="70dp"
                 android:layout_marginEnd="8dp"
+                android:clickable="true"
                 android:background="@drawable/ic_similar"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.5"
